--- a/Likelihood_estimator.ipynb
+++ b/Likelihood_estimator.ipynb
@@ -15,7 +15,7 @@
     "def simulated_response(log_f, N, Rmin=10, Rmax=60, C=1):\n",
     "    t=1 #s\n",
     "    Rmax= 60 #imp/s\n",
-    "    response = np.random.poisson(lam=np.exp(log_f)*Rmax*t, size=N)\n",
+    "    response = np.random.poisson(lam=np.exp(log_f)*Rmax*t*C, size=N)\n",
     "    #simulate the fact that Rmin=10 and Rmax=60\n",
     "    response[response<Rmin] = Rmin\n",
     "    response[response>Rmax] = Rmax\n",
