now C is working, ops

--- a/Likelihood_estimator.ipynb
+++ b/Likelihood_estimator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
     "    for trial in range(n_trials):\n",
     "        y=np.random.choice([0, 1])\n",
     "        y_true.append(y)\n",
-    "        response = simulated_response(log_f(stimuli_angles[y], theta_tune, kappa=1), N, C=1)\n",
+    "        response = simulated_response(log_f(stimuli_angles[y], theta_tune, kappa=kappa), N, C=C)\n",
     "        score.append(log_likelihood(response, stimuli_angles[1], theta_tune)-log_likelihood(response, stimuli_angles[0], theta_tune))\n",
     "    #score=np.exp(np.array(score))\n",
     "    fpr, tpr, _= roc_curve(y_true, score)\n",
@@ -316,11 +316,6 @@
    "source": [
     "# Detection"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
